--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+
 }
 
 .profile-image {
@@ -43,6 +48,18 @@ a {
   color: rebeccapurple;
 }
 
-ul {
+ul{
   list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
+}
+
+.left, .right{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 8px;
 }
